# NeuPIMs

./: .clang-format  .gitignore  .gitmodules  .justfile  CMakeLists.txt  CMakeUserPresets.json  Cargo.toml  brun_release.sh  counts.json  sjq.toml  todo.md
src/: CMakeLists.txt  Common.cc  Common.h  Dram.cc  Dram.h  NeuPIMSCore.cc  NeuPIMSystolicWS.cc  Simulator.cc  Simulator.h  main.cc
src/allocator/: WeightAllocator.cc
src/client/: Client.cc
src/operations/: FusedMHA.cc  MatMul.cc  NeuPIMSAttend.cc  NeuPIMSLogitSoftmax.cc
src/rust/neupimrust/: Cargo.toml  bindings.h  build.rs
src/rust/neupimrust/src/: global_counts.rs  lib.rs  no_icnt.rs  settings.rs
src/rust/neupimsim/: Cargo.toml
src/rust/neupimsim/src/: main.rs
src/scheduler/: Scheduler.cc
src/tensor/: NPUTensor.cc
src/zig/neuzig/: .gitignore  build.zig
src/zig/neuzig/src/: main.zig
