[package]
name = "neupimrust"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["staticlib","rlib"]
[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
[build-dependencies]
cbindgen = "0.27.0"
